# my_beginner_tutorials

./: .gitignore  CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_beginner_tutorials/include/my_beginner_tutorials/my_beginner_tutorials/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/my_beginner_tutorials/include/my_beginner_tutorials/my_beginner_tutorials/srv/: change_string.hpp
install/my_beginner_tutorials/include/my_beginner_tutorials/my_beginner_tutorials/srv/detail/: change_string__builder.hpp  change_string__rosidl_typesupport_fastrtps_c.h  change_string__rosidl_typesupport_introspection_c.h  change_string__struct.h  change_string__traits.hpp  change_string__type_support.h  change_string__type_support.hpp
install/my_beginner_tutorials/lib/my_beginner_tutorials/: publisher_node  subscriber_node
install/my_beginner_tutorials/local/lib/python3.10/dist-packages/my_beginner_tutorials/: _my_beginner_tutorials_s.ep.rosidl_typesupport_introspection_c.c
install/my_beginner_tutorials/local/lib/python3.10/dist-packages/my_beginner_tutorials-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/my_beginner_tutorials/local/lib/python3.10/dist-packages/my_beginner_tutorials/srv/: _change_string.py
install/my_beginner_tutorials/share/ament_index/resource_index/parent_prefix_path/: my_beginner_tutorials
install/my_beginner_tutorials/share/my_beginner_tutorials/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_beginner_tutorials/share/my_beginner_tutorials/cmake/: export_my_beginner_tutorials__rosidl_generator_cExport-noconfig.cmake  export_my_beginner_tutorials__rosidl_generator_cExport.cmake  export_my_beginner_tutorials__rosidl_generator_cppExport.cmake  export_my_beginner_tutorials__rosidl_generator_pyExport.cmake  export_my_beginner_tutorials__rosidl_typesupport_fastrtps_cExport.cmake  export_my_beginner_tutorials__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_beginner_tutorials__rosidl_typesupport_fastrtps_cppExport.cmake  my_beginner_tutorials__rosidl_typesupport_cExport.cmake  my_beginner_tutorials__rosidl_typesupport_cppExport-noconfig.cmake  my_beginner_tutorials__rosidl_typesupport_cppExport.cmake  my_beginner_tutorials__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_beginner_tutorials/share/my_beginner_tutorials/srv/: ChangeString.idl
launch/: bag_launch.launch.py  pubsub_launch.launch.py  test.launch.py
log/: latest_build
results/: cpplint.txt  frames.gv
results/bag_list/: bag_list_0.db3  metadata.yaml
scripts/: install.sh
src/: publisher_node.cpp  subscriber_node.cpp
srv/: ChangeString.srv
test/: test_talker.cpp
